# varscan-tool

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
docker/: Dockerfile
docker/multi_varscan2/: Dockerfile  multi_varscan2.py  multi_varscan2_p3.py
tests/: test_varscan.py  test_varscan_somatic.py  test_varscan_somatic_process.py
tests/unit/: test_main.py
varscan-tool/: postgres.py  varscan-main.py  varscanVariantCaller.py
varscan_tool/: __init__.py  __main__.py  multi_varscan.py  utils.py  varscan.py  varscan_somatic.py  varscan_somatic_process.py
varscan_tool.egg-info/: PKG-INFO  SOURCES.txt
